# startmcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  problem-statement.md  pyproject.toml  setup.py
docs/: project.md
docs/architecture/: gateway.md  overview.md  routing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: creating-providers.md
docs/reference/: cli.md
mcp/: __init__.py  aggregator.py  categories.py  client.py  config.py  conflict_resolver.py  exceptions.py  gateway.py  protocol.py  provider.py  registry.py  router.py
mcp/auth/: api_key.py  oauth.py
mcp/cli/: __init__.py  main.py  wizard.py
mcp/server/: base.py  stdio_server.py
mcp/transport/: base.py  sse.py  stdio.py
provider_mcps/: __init__.py
provider_mcps/enterprise/: __init__.py
provider_mcps/enterprise/atlassian/: __init__.py  config.py  provider.py
tests/: __init__.py  conftest.py
tests/integration/: test_gateway.py
tests/unit/: test_aggregator.py  test_client.py  test_config.py  test_protocol.py  test_provider.py  test_router.py
